[package]
name = "proof-api-l2"
description = "Transaction proof builder for L2."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
bytesize = { workspace = true, features = ["serde"] }
clap = { workspace = true }
everscale-crypto = { workspace = true }
everscale-types = { workspace = true, features = ["sync", "tycho", "models", "rand", "base64"] }
fdlimit = { workspace = true }
futures-util = { workspace = true }
humantime = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rlimit = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
weedb = { workspace = true }

tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
    "profiling",
] }

tycho-block-util = { workspace = true }
tycho-core = { workspace = true }
tycho-network = { workspace = true }
tycho-storage = { workspace = true }
tycho-util = { workspace = true, features = ["cli"] }
tycho-light-node = { workspace = true }

[lints]
workspace = true
