[package]
name = "proof-api-ton"
description = "Transaction proof builder for TON."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
everscale-types = { workspace = true }

tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }

proof-api-util = { workspace = true }
ton-lite-client = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
