[package]
name = "proof-api-ton"
description = "Transaction proof builder for TON."
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aide = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
everscale-types = { workspace = true, features = ["sync"] }
governor = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["timeout", "cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tikv-jemallocator = { workspace = true, features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }

proof-api-util = { workspace = true, features = ["api"] }
ton-lite-client = { workspace = true }
tycho-util = { workspace = true, features = ["cli"] }

[build-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
