[package]
name = "ton-lite-client"
description = "TON Lite Client"
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aes = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
ctr = { workspace = true }
dashmap = { workspace = true }
generic-array = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

everscale-crypto = { workspace = true, features = ["tl-proto", "serde"] }
everscale-types = { workspace = true, features = ["models", "serde", "base64"] }
tycho-util = { workspace = true }

[dev-dependencies]
proof-api-util = { workspace = true }

[lints]
workspace = true
