[package]
name = "ton-lite-client"
description = "TON Lite Client"
include = ["src/**/*.rs", "src/**/*.tl", "./LICENSE-*", "./README.md"]
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
aes = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
arc-swap = { workspace = true }
ctr = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
generic-array = { workspace = true }
rand = { workspace = true }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tl-proto = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

tycho-crypto = { workspace = true, features = ["tl-proto", "serde", "rand9"] }
tycho-types = { workspace = true, features = ["models", "serde", "base64"] }
tycho-util = { workspace = true }

[dev-dependencies]
proof-api-util = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
